# GPU-SVDAG-Editing

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  vcpkg.json
extras/hashmap_bench/: CMakeLists.txt
extras/hashmap_bench/src/: main.cu
python/: benchmark_hash_dag.py  benchmark_hash_table.py  plot_dag_edit_performance.py  plot_hash_table_performance.py  shared.py
replays/: epiccitadel_copy.csv  epiccitadel_large_copy.csv  epiccitadel_large_edits.csv  epiccitadel_paint_debug.csv  epiccitadel_pg2024_demo1.csv  epiccitadel_pt_inside.csv  epiccitadel_pt_outside.csv  epiccitadel_pt_outside_2.csv  epiccitadel_top_paint_pg24.csv  epiccitadel_zoom_out17.csv  my_bunny_pt_inside.csv  sanmiguel_floor_copy.csv  sanmiguel_large_tree_copy.csv  sanmiguel_view1.csv
src/: array.h  array2d.h  binary_reader.h  binary_writer.h  blur.cu  blur.h  color_utils.h  cuda_error_check.h  cuda_helpers.h  cuda_helpers_cpp.cu  cuda_helpers_cpp.h  cuda_math.h  dag_tracer.cu  dag_tracer.h  engine.cpp  engine.h  events.cpp  events.h  free_image_wrapper.cpp  free_image_wrapper.h  image.cpp  image.h  is_of_type.h  main.cpp  memory.cu  memory.h  path.h  replay.h  stats.cpp  stats.h  tracer.cu  tracer.h  typedefs.h  utils.h  voxel_textures.cpp  work_queue.h
src/configuration/: gpu_hash_dag_definitions.h  profile_definitions.h  script_definitions.h
src/dags/: dag_utils.h
src/dags/my_gpu_dags/: create_edit_svo.cu  create_edit_svo.h
src/dags/my_gpu_dags/cub/: cub_merge_sort.cu  cub_merge_sort.h  cub_radix_sort.cu  cub_radix_sort.h  cub_scan.cu  cub_scan.h  cub_select.cu  cub_select.h
src/dags/my_gpu_dags/my_gpu_hash_dag/: my_gpu_hash_dag.cu  my_gpu_hash_dag.h  my_gpu_hash_dag_edits.cu  my_gpu_hash_dag_factory.cpp  my_gpu_hash_dag_threaded_factory.cpp
src/dags/my_gpu_dags/my_gpu_hash_dag/hash_tables/: acceleration_hash_table.h  compact_acceleration_hash_table.h  dynamic_slab_alloc.cu  dynamic_slab_alloc.h  gpu_hash_table_base.cu  gpu_hash_table_base.h  individual_chaining_hash_table.h
tests/: CMakeLists.txt  array2d.cpp  color_utils_tests.cpp  fast_sort.cu  main.cpp  utils_tests.cu
tests/gpu_hash_dag/: duplicate_hash_table_test.cu  gpu_base_dag_test.cpp  gpu_hash_dag_tests.cpp  gpu_slab_allocator_test.cu  hash_table_test.cpp  hash_table_test_cuda.cu  hash_table_test_cuda.h
